--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
-.App {
-  text-align: center;
+.app {
+  height: 100vh;
+  width: 100vw;
+  background-color: orange;
+  display: grid;
+  place-items: center;
 }
-
-.header-class{
-  color:orange;
+.container {
+  height: 700px;
+  width: 500px;
+  display: flex;
+  align-items: center;
+  background-color: grey;
+  border: 12px;
+  padding: 32px 0;
 }
-button{
-margin:4px;
+.todoContainer {
+  flex: 1;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
